- Fix firewall rules cannot be moved into the preset rule area.
- Fix disable fw button not working under certain conditions.
- Fix importing ZFS datasets and ZFS volumes from different ZFS pools.
- Fix code format for Swedish file manager.
- Fix gettext protection against html code injections.
- Fix issue when reformatting disks.
- Fix a problem with gpt/labels.
- Fix Some HGST drive temperatures are not displayed.
- Fix download log files did not always work with some browsers.
- Fix some code errors on System|Advanced|Swap.
- Fix broken log files downloads.
- Fix test emails could not send as in French WebGUI.
- Fix change permission of a dataset fails if related pool doesn't use the default mount point.
- Fix timezone in file manager.
- Fix websockets-connection drop on mouse events in novnc.
- Fix reverted libvncserver for proper shutdown vms.
- Fix zpool tools - support added for pools with more than 10 vdevices.
- Fix zpool tools - support added for vdevices with more than 10 devices.
- Fix zpool tools - exception handling.

Permanent restrictions:
- It is not possible to use virtualbox-ose on 32-bits nas4free, 64-bits only feature.
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.
- AFP shares with TimeMachine support are limited to max. 4 shares.
- iperf3 is not backwards compatible with iperf2.x. so you might also upgrade your client.

Known bugs:
- If DHCP for IPv4 is used, the IPv6 statically configured DNS server will be
  overriden by the IPv4 DNS server.

NEED TESTING:
- IPv6: auto mode
- All services using IPv6 address (NFS, FTP, etc...)
- Netatalk VFS Samba module (automatically enabled when Netatalk starts) crashes
  samba when accessing to share
- Need to write an online-test procedure

Help needed:
- Need help for adding LDAP authentication feature:
  Main services can be easily authenticated using PAM-LDAP, but is harder for Samba.
