@@ -21,6 +21,7 @@ Fixes:
 - Fix support added for vdevices with more than 10 devices.
 - Fix exception handling improved.
 - Fix config for DNS server configuration.
+- Fix sending reports.
 
 Permanent restrictions:
 - No more x86 versions of NAS4Free 11 series will be made, 32-bits users need 10.3 than.
